test/tasty/neg/src-2/TestErasedTypes.check
TestErasedTypes_fail.scala:9: error: Unsupported Scala 3 erased value x; found in method foo1 in trait tastytest.ErasedTypes.Foo.
  def test3(f: Foo) = f.foo1("foo")
                        ^
TestErasedTypes_fail.scala:10: error: Unsupported Scala 3 erased value x; found in method foo2 in trait tastytest.ErasedTypes.Foo.
  def test4(f: Foo) = f.foo2("foo")
                        ^
TestErasedTypes_fail.scala:12: error: Unsupported Scala 3 erased method theString; found in object tastytest.ErasedTypes.ErasedCompileTimeOps.
  def test5 = ErasedCompileTimeOps.theString
                                   ^
3 errors
